feat(web): 初始化前端项目并实现基础功能
- 创建 React 应用入口文件 App.jsx 和路由配置
- 实现登录页面包含登录和注册功能
- 开发主布局组件包含侧边栏和导航菜单
- 构建仪表盘页面显示系统统计数据
- 实现渠道管理页面支持增删改查操作
- 创建 Token 管理页面用于 API 密钥管理
- 添加用户管理页面用于用户状态控制
- 开发个人中心页面支持资料修改和密码更改
- 集成 Ant Design 组件库和相关图标
- 配置 Vite 开发服务器和代理设置
- 实现认证拦截器和 API 接口封装
- 添加私有路由保护和用户权限控制